[gd_scene load_steps=3 format=3 uid="uid://ba7tc2g1wlo02"]

[ext_resource type="Script" path="res://src/gui/pauseMenu/pauseMenu.gd" id="1_cay6y"]
[ext_resource type="Theme" uid="uid://bbvixcv2opc1q" path="res://src/resources/themes/mainMenuButtonLabelTheme.tres" id="2_cr1mw"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_cay6y")
layerIndex = 30

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.184314)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cr1mw")
text = "Settings"

[node name="MainMenuButton" type="Button" parent="Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cr1mw")
text = "Main Menu"

[node name="QuitToDesktopButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cr1mw")
text = "Quit To Desktop"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/QuitToDesktopButton" to="." method="_on_quit_to_desktop_button_pressed"]
